--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Novoda Open Source
-email: info@novoda.com
-description: Novoda’s Open Source projects help you write cleaner, more responsive, automated code, and provide some of the greatest tools for agile software development.
+title: The Open Commerce Initiative
+email: milind7@live.com
+description: Open Commerce's Open Source projects help you write cleaner, more responsive, automated code, and provide some of the greatest tools for agile software development.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://novoda.github.io" # the base hostname & protocol for your site
-twitter_username: novoda
-github_username:  novoda
+url: "http://opencommerce.github.io" # the base hostname & protocol for your site
+twitter_username: opencommerce
+github_username:  opencommerce
 
 # Build settings
 markdown: kramdown
